* NEWS (user visible changes)
 
** Release 0.9.6 < not yet >
   
   - FreeBSD build fix
   - fix matching for mu cfind to be as expected
   - wildcard searches for all fields (except for path/maildir)
   - search for attachment file names (with 'a:'/'attach:') -- also works with
     wildcards
 
** Release 0.9.5 <2011-04-25 Mon>

   - bug fix for infinite loop in Maildir detection
   - minor fixes in tests, small optimizations

** Release 0.9.4 <2011-04-12 Tue>

   - add the 'cfind' command, to search/export contact information
   - add 'flag:unread' as a synonym for 'flag:new OR NOT flag:unseen'  
   - updated documentation


** Release 0.9.3 <2011-02-13 Sun>
   
   - don't warn about missing files with --quiet
   
** Release 0.9.2 <2011-02-02 Wed>

   - stricter checking of options; and options must now *follow* the sub-command
     (if any); so, something like: 'mu index --maildir=/foo/bar'
   - output searches as plain text (default), XML, JSON or s-expressions using 
     --format=plain|xml|json|sexp. For example: 'mu find foobar
     --output=json'. These format options  are experimental (except for 'plain')
   - the --xquery option should now be used as --format=xquery, for output
     symlinks, use --format=links. This is a change in the options.
   - search output can include the message size using the 'z' shortcut
   - match message size ranges (i.e.. size:500k..2M)
   - fix: honor the --overwrite (or lack thereof) parameter
   - support folder names with special characters (@, ' ', '.' and so on)
   - better check for already-running mu index
   - when --maildir= is not provided for mu index, default to the last one
   - add --max-msg-size, to specify a new maximum message size
   - move the 'mug' UI to toys/mug; no longer installable
   - better support for Solaris builds, Gentoo.

** Release 0.9.1 <2010-12-05 Sun>
   
   - Add missing icon for mug 
   - Fix unit tests (Issue #30)
   - Fix Fedora 14 build (broken GTK+ 3) (Issue #31)
     