@@ -327,9 +327,6 @@ descending order (e.g., from lowest to highest). This is usually a good
 choice, but for dates it may be more useful to sort in the opposite direction.
 
 .TP
-\fB\-\-xquery\fR
-
-.TP
 \fB\-k\fR, \fB\-\-summary\-len\fR=\fI<len>\fR
 output a summary based on up to \fI\len\fR lines of the message. The default
 is \fB0\fR: no summary at all.
